Thêm chức năng bài kiểm tra, và update phần gán khóa học cho phòng ban